T880: close -- lane glyphs confirmed rendering on a real terminal
The T880 fix (13bd6751: -Dstdout.encoding / -Dstderr.encoding) is verified: the
owner ran `talos run` on a Unicode-capable terminal and the route/tool-step lane
glyphs render as bullet/arrow/check, not the '?' substitution. This was the one
acceptance that could not be verified headlessly. Ticket moved to done/.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>